test/library/standard/Sort/errors/sortDomainArray.rect3.good
sortDomainArray.chpl:67: error: sorted() is currently only supported on associative domains
